--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -3,15 +3,7 @@ name: CI on PR
 
 # Definition when the workflow should run
 on:
-    push:
-    workflow_dispatch:
-        inputs:
-            prerelease:
-                description: 'Run on a prerelease org?'
-                required: false
-                type: boolean
-    pull_request:
-        types: [opened, edited, synchronize, reopened]
+  push:
 
 # Workflow environment variables
 env:
@@ -22,8 +14,7 @@ env:
 jobs:
     # Formatting and linting only runs on human-submitted PRs
     format-lint-lwc-tests:
-        if: github.actor != 'trailheadapps-bot'
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         steps:
             # Checkout the source code
             - name: 'Checkout source code'
